error.log
srcs/map/rev_ite_construct.cpp:14:56: error: no matching constructor for initialization of 'ft::map<int, int>::const_reverse_iterator' (aka 'reverse_iterator<ft::tree_map<ft::pair<const int, int>, ft::map<int, int>::value_compare>::rb_cit>')
        TESTED_NAMESPACE::map<T1, T2>::const_reverse_iterator crit(rit);
                                                              ^    ~~~
./../reverse_iterator.hpp:26:2: note: candidate constructor not viable: no known conversion from 'reverse_iterator<ft::map<int, int>::iterator>' to 'const reverse_iterator<ft::tree_map<ft::pair<const int, int>, ft::map<int, int>::value_compare>::rb_cit>' for 1st argument
        reverse_iterator(const reverse_iterator &c): _b(c.base()) {}
        ^
./../reverse_iterator.hpp:27:2: note: candidate constructor not viable: no known conversion from 'ft::map<int, int>::reverse_iterator' (aka 'reverse_iterator<ft::tree_map<ft::pair<const int, int>, ft::map<int, int>::value_compare>::rb_it>') to 'const ft::tree_map<ft::pair<const int, int>, ft::map<int, int>::value_compare>::rb_cit' for 1st argument
        reverse_iterator(const Iterator &c): _b(c) {}
        ^
./../reverse_iterator.hpp:25:2: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
        reverse_iterator(): _b() {};
        ^
1 error generated.
